# nlp-disinformation-detection-aitu

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  Makefile  PROJECT_PLAN.md  README.md  main.py  main.tex  pyproject.toml  references.bib
config/: baseline.yml  dataset.yaml  hybrid.yaml  transformer.yaml
docs/: HYBRID_MODEL.md  KAGGLE_TRAINING.md  TRAINING_IMPROVEMENTS.md
notebooks/: 01_eda_liar.ipynb  01_eda_liart.ipynb  _build_kaggle_notebook.py  _build_training_notebook.py  kaggle_training.ipynb  training.ipynb
reports/: bootstrap_ci.json  bootstrap_ci_table.md  leakage_verification.json  leakage_verification_predictions.json  multi_seed_summary.json  results_summary.json
reports/predictions/: baseline_naive_bayes_test_predictions.jsonl  baseline_svm_test_predictions.jsonl  hybrid_test_predictions.jsonl  hybrid_textonly_test_predictions.jsonl  transformer_test_predictions.jsonl
reports/seed_1337/: baseline_detailed_metrics.json
reports/seed_2024/: baseline_detailed_metrics.json
scripts/: bootstrap_ci.py  download_data.py  import_results_archive.py  package_artifacts.py  package_overleaf.py  plot_confusion_matrices.py  plot_per_class_f1.py  plot_training_curves.py  preprocess.py  train_baseline.py  train_hybrid.py  train_transformer.py  verify_leakage.py
tests/: test_artifact_workflow.py  test_baseline.py  test_bootstrap_ci.py  test_hybrid.py  test_leakage_verification.py  test_losses.py  test_plot_confusion_matrices.py  test_plot_per_class_f1.py  test_plot_training_curves.py  test_preprocessing.py  test_transformers.py
(+51 files in other folders)
